Correct collapsing margin for nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,6 @@ html {
   font-size: 1.25em; /* 20px on most screens */
 }
 body {
-  /* width: 90%; */
-  /* margin: auto; */
   font: 300 100%/1.5 "Open Sans", sans-serif;
 }
 nav, header {
@@ -55,6 +53,7 @@ h1 {
   font-weight: bold;
 }
 .name {
+  padding-top: 1rem;
   font-size: 1.4rem;
 }
 .nav a {
